welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:3: error: identifier expected but '(' found.
  var max: Int = nums.(0)
                      ^